--- a/theme/templates/includes/footer.html
+++ b/theme/templates/includes/footer.html
@@ -7,7 +7,7 @@
             <- Previous page
         </a>
         {{end}}
-        {{if .PageParams.Next}}
+        {{if .PageParams.NextPage}}
             <a href="/{{.PageParams.NextPage}}.html" style="float:right;">
                 Next page->
             </a>
