--- a/theme/templates/includes/header.html
+++ b/theme/templates/includes/header.html
@@ -4,12 +4,12 @@
         <hr>
         {{if .PageParams.PreviousPage}}
         <a href="/{{.PageParams.PreviousPage}}.html" style="float:left;">
-            <- Previous page
+            &#8592;Previous page
         </a>
         {{end}}
         {{if .PageParams.NextPage}}
             <a href="/{{.PageParams.NextPage}}.html" style="float:right;">
-                Next page->
+                Next page&#8594;
             </a>
         {{end}}
         <br>
